# Excel-Data-Validator

./: .gitignore  Apple Price Index.xlsx  Python Excel Test.py  Readme.md  VirtualEnv.md  apples_2013.xlsx  apples_2020.xlsx  bootstrap  differences.xlsx  pyproject.toml
env/: pyvenv.cfg
