[tool.poetry]
name = "excel-compare-script"
version = "0.1.0"
description = ""
authors = ["Gabi S <51805975+sgabriella2023@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.0"
pandas = "^2.1.1"
openpyxl = "^3.1.2"
xlsxwriter = "^3.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
